--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <input type="date" id="separationDate">
 
         <div id="dateRangeSection" class="hidden">
-            <p>Date Range:</p>
+            <p>Program Start Date:</p>
             <select id="dateRangeDropdown"></select>
             <button onclick="calculateDates()">Calculate</button>
         </div>
